--- a/db/fixtures/miq_user_roles.yml
+++ b/db/fixtures/miq_user_roles.yml
@@ -174,6 +174,10 @@
   - vm_timeline
   - vm_chargeback
   - sui_services_view
+  - sui_vm_details_view
+  - sui_vm_console
+  - sui_vm_web_console
+  - sui_vm_tags
 
 - :name: EvmRole-auditor
   :read_only: true
@@ -263,6 +267,10 @@
   - vm_timeline
   - vm_chargeback
   - sui_services_view
+  - sui_vm_details_view
+  - sui_vm_console
+  - sui_vm_web_console
+  - sui_vm_tags
 
 - :name: EvmRole-desktop
   :read_only: true
@@ -318,6 +326,12 @@
   - vm_shelve_offload
   - vm_timeline
   - vm_chargeback
+  - sui_vm_details_view
+  - sui_vm_console
+  - sui_vm_web_console
+  - sui_vm_start
+  - sui_vm_stop
+  - sui_vm_suspend
 
 - :name: EvmRole-operator
   :read_only: true
@@ -441,6 +455,13 @@
   - vm_timeline
   - vm_chargeback
   - sui_services_view
+  - sui_vm_details_view
+  - sui_vm_console
+  - sui_vm_web_console
+  - sui_vm_tags
+  - sui_vm_start
+  - sui_vm_stop
+  - sui_vm_suspend
 
 - :name: EvmRole-security
   :read_only: true
@@ -524,6 +545,10 @@
   - vm_timeline
   - vm_chargeback
   - sui_services_view
+  - sui_vm_details_view
+  - sui_vm_snapshot_create
+  - sui_vm_snapshot_delete
+  - sui_vm_tags
 
 - :name: EvmRole-support
   :read_only: true
@@ -608,6 +633,10 @@
   - vm_timeline
   - vm_chargeback
   - sui_services_view
+  - sui_vm_details_view
+  - sui_vm_console
+  - sui_vm_web_console
+  - sui_vm_tags
 
 - :name: EvmRole-user
   :read_only: true
@@ -688,6 +717,10 @@
   - vm_timeline
   - vm_chargeback
   - sui_services_view
+  - sui_vm_details_view
+  - sui_vm_console
+  - sui_vm_web_console
+  - sui_vm_tags
 
 - :name: EvmRole-user_limited_self_service
   :read_only: true
@@ -871,6 +904,14 @@
   - vm_vmrc_console
   - vm_vnc_console
   - cockpit_console
+  - sui_vm_details_view
+  - sui_vm_console
+  - sui_vm_web_console
+  - sui_vm_tags
+  - sui_vm_retire
+  - sui_vm_start
+  - sui_vm_stop
+  - sui_vm_suspend
 
 - :name: EvmRole-tenant_administrator
   :read_only: true
