--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ addons:
   postgresql: '9.4'
 before_install:
 - source ${TRAVIS_BUILD_DIR}/tools/ci/before_install.sh
+install: bin/setup
 before_script:
 - source ${TRAVIS_BUILD_DIR}/tools/ci/before_script.sh
 script:
