--- a/config/settings.yml
+++ b/config/settings.yml
@@ -15,6 +15,8 @@
   :user_type: userprincipalname
   :amazon_key:
   :amazon_secret:
+:binary_blob:
+  :purge_window_size: 100
 :broker_notify_properties:
   :exclude:
     :HostSystem:
@@ -1154,6 +1156,7 @@
         :restart_interval: 6.hours
     :schedule_worker:
       :container_entities_purge_interval: 1.day
+      :binary_blob_purge_interval: 1.hour
       :authentication_check_interval: 1.hour
       :chargeback_generation_interval: 1.day
       :chargeback_generation_time_utc: 01:00:00
