--- a/product/dialogs/miq_dialogs/miq_provision_redhat_dialogs_template.yaml
+++ b/product/dialogs/miq_dialogs/miq_provision_redhat_dialogs_template.yaml
@@ -440,8 +440,9 @@
               :vlans: true
             :method: :allowed_vlans
           :description: Network
-          :required: false
+          :required: true
           :display: :edit
+          :default: <Template>
           :data_type: :string
         :mac_address:
           :description: MAC Address
