Add a setting for ansible job data retention
This setting will control how many days of job data should be
kept.

When the setting is changed we call out to ansible tower to alter
the setting for their weekly system job. If the user wants to run
the job on-demand they can use the EmbeddedAnsible#run_job_data_retention
method.

Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1560478

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -128,6 +128,7 @@
     :keep_drift_states: 6.months
     :purge_window_size: 10000
 :embedded_ansible:
+  :job_data_retention_days: 120
   :docker:
     :task_image_name: ansible/awx_task
     :task_image_tag: latest
