--- a/config/settings.yml
+++ b/config/settings.yml
@@ -972,6 +972,7 @@
 :product:
   :maindb: ExtManagementSystem
   :container_deployment_wizard: false
+  :transformation: true
 :prototype:
   :queue_type: miq_queue
   :artemis:
