Don't format PersistentVolume-capacity as bytes
There are other tables that have `capacity` columns that are formatted
as bytes. This newer column is serialized and will blow when trying to
apply this formatting to it. Since the existing way of mapping columns
to formats does not take table name into account, we need a temporary
way to override this for colliding column names. This can later be
reworked so all mapped formats will be qualified in some way.

Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1563861

--- a/db/fixtures/miq_report_formats.yml
+++ b/db/fixtures/miq_report_formats.yml
@@ -1,5 +1,8 @@
 ---
 :defaults_and_overrides:
+  :formats_by_path:
+    :PersistentVolume-capacity: null
+
   :formats_by_data_type:
     :integer: :general_number_precision_0
     :decimal: :general_number_precision_0
