--- a/db/fixtures/miq_report_formats.yml
+++ b/db/fixtures/miq_report_formats.yml
@@ -1,7 +1,10 @@
 ---
 :defaults_and_overrides:
   :formats_by_path:
+    :ContainerVolume-capacity: null
+    :ContainerVolumeKubernetes-capacity: null
     :PersistentVolume-capacity: null
+    :PersistentVolumeClaim-capacity: null
 
   :formats_by_data_type:
     :integer: :general_number_precision_0
