--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,7 @@
     "angular-ui-sortable": "~0.16.1",
     "angular.validators": "~4.4.2",
     "array-includes": "~1.0.0",
+    "base64-js": "~1.2.3",
     "bootstrap-filestyle": "~1.2.1",
     "bootstrap-hover-dropdown": "~2.2.1",
     "bootstrap-switch": "~3.3.2",
@@ -36,18 +37,17 @@
     "fetch": "~1.0.0",
     "jasmine-jquery": "~2.1.1",
     "jquery": "~2.2.4",
-    "jquery-1.8": "~1.8.3",
     "jquery-ui": "jqueryui#~1.12.1",
     "jquery-ujs": "~1.2.2",
     "jquery.observe_field": "himdel/jquery.observe_field#~0.1.0",
     "kubernetes-topology-graph": "~0.0.23",
     "manageiq-ui-components": "0.0.12",
-    "moment-duration-format": "~1.3.0",
     "moment-strftime": "~0.2.0",
     "moment-timezone": "~0.4.1",
+    "moment-duration-format": "~1.3.0",
     "numeral": "~1.5.5",
     "patternfly-bootstrap-treeview": "~2.1.1",
-    "patternfly-timeline": "~1.0.3",
+    "patternfly-timeline": "~1.0.5",
     "phantomjs-polyfill": "~0.0.2",
     "qs": "~0.3.10",
     "rx-angular": "rx.angular#~1.1.3",
@@ -55,6 +55,7 @@
     "spice-html5-bower": "himdel/spice-html5-bower#~1.6.3",
     "spin.js": "~2.3.2",
     "sprintf": "~1.0.3",
+    "text-encoder-lite": "~1.0.1",
     "tota11y": "~0.1.6",
     "xml_display": "~0.1.1",
     "bootstrap-select": "1.12.2"
