Add `:transformation` under product and set to `false` by default
https://bugzilla.redhat.com/show_bug.cgi?id=1565328

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -969,6 +969,7 @@
 :product:
   :maindb: ExtManagementSystem
   :container_deployment_wizard: false
+  :transformation: false
 :prototype:
   :queue_type: miq_queue
   :artemis:
