--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1029,6 +1029,10 @@
   :level_websocket_in_evm: error
   :level_vcloud: info
   :level_vcloud_in_evm: error
+:notifications:
+  :history:
+    :purge_window_size: 1000
+    :keep_notifications: 1.week
 :management_system:
   :power_operation_expiration: 10.minutes
 :performance:
@@ -1421,6 +1425,7 @@
       :log_database_statistics_interval: 1.days
       :memory_threshold: 500.megabytes
       :nice_delta: 3
+      :notifications_purge_interval: 1.day
       :orchestration_stack_retired_interval: 10.minutes
       :performance_collection_interval: 3.minutes
       :performance_collection_start_delay: 5.minutes
